# RoboCupRescuePackage

./: .bashrc.USARGaz  .bashrc.USARGazebo  CMakeLists.txt  DiffDrivePlugin_rc2016.cc  DiffDrivePlugin_rc2016.hh  LICENSE  README.md  SkidSteerDrivePlugin_rc2016.cc  SkidSteerDrivePlugin_rc2016.hh  USARGaz.run  USARGaz1.cc  USARGazebo-WorldPluginSample.cc  USARGazebo.cc  USARGazebo.run  USARGazebo.world  USARcommandSample.txt  boost_server_framework.hh  break_usar_command_into_params.hh  crawler_robot_1DEG.cc  encoder_msgs.hh  get_topics_list.hh  robot_teleop.cc  start_all.launch  usarsim_pub.cc
RoboCupRescuePackage/: USARGaz1.cc
models/Crawler_Robot/: model.config  model.sdf
models/Crawler_Robot/dae/: arm_crawler_2.dae  crawler.dae
models/box_gazebo_generated/: model.config  model.sdf
models/camera_rc2016/: model.config  model.sdf
models/crawler_robot/: model.config  model.sdf
models/crawler_robot/dae/: crawler_b.dae  crawler_g.dae  crawler_r.dae  crawler_y.dae
models/crawler_robot_b/: model.config  model_b.sdf
models/crawler_robot_g/: model.config  model_g.sdf
models/crawler_robot_r/: model.config  model_r.sdf
models/crawler_robot_y/: model.config  model_y.sdf
models/create_rc2016/: model.config  model.sdf
models/hokuyo_rc2016/: model.config  model.sdf
models/pioneer2dx_with_sensors/: model.config  model.sdf
models/pioneer2dx_with_sensors_b/: model.config  model_b.sdf
models/pioneer2dx_with_sensors_g/: model.config  model_g.sdf
models/pioneer2dx_with_sensors_r/: model.config  model_r.sdf
models/pioneer2dx_with_sensors_y/: model.config  model_y.sdf
models/pioneer3at_with_sensors/: model.config  model.sdf
models/pioneer3at_with_sensors/meshes/: chassis.blend  chassis.dae
models/pioneer3at_with_sensors_b/: model.config  model.sdf  model_b.sdf
models/pioneer3at_with_sensors_b/meshes/: chassis.blend  chassis.dae
models/pioneer3at_with_sensors_g/: model.config  model.sdf  model_g.sdf
models/pioneer3at_with_sensors_g/meshes/: chassis.blend  chassis.dae
models/pioneer3at_with_sensors_r/: model.config  model_r.sdf  model_r_V1.sdf
models/pioneer3at_with_sensors_y/: model.config  model.sdf  model_y.sdf
models/pioneer3at_with_sensors_y/meshes/: chassis.blend  chassis.dae
models/portmessa/: model.config  model.sdf  portmessa.dae
models/simple_block_world/: .model.sdf.swp  model.config  model.sdf
models/turtlebot_with_sensors/: model.config  model.sdf
models/turtlebot_with_sensors/meshes/: plate_0_logo.blend  plate_0_logo_b.blend  plate_0_logo_b.dae  plate_0_logo_g.blend  plate_0_logo_g.dae  plate_0_logo_r.blend  plate_0_logo_r.dae  plate_0_logo_y.blend  plate_0_logo_y.dae  plate_1_logo.blend  plate_1_logo_b.blend  plate_1_logo_b.dae  plate_1_logo_g.blend  plate_1_logo_g.dae  plate_1_logo_r.blend  plate_1_logo_r.dae  plate_1_logo_y.blend  plate_1_logo_y.dae  plate_2_logo.blend  plate_2_logo_b.blend  plate_2_logo_b.dae  plate_2_logo_g.blend  plate_2_logo_g.dae  plate_2_logo_r.blend  plate_2_logo_r.dae  plate_2_logo_y.blend  plate_2_logo_y.dae
models/turtlebot_with_sensors_b/: model.config  model_b.sdf
models/turtlebot_with_sensors_g/: model.config  model_g.sdf
models/turtlebot_with_sensors_r/: model.config  model_r.sdf
models/turtlebot_with_sensors_y/: model.config  model_y.sdf
msgs/: CMakeLists.txt  encoder.proto
